--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/FFFfengfengfeng/Smashing-Node-Note#readme",
   "dependencies": {
-    "colors": "^1.2.4"
+    "colors": "^1.2.4",
+    "superagent": "^3.8.3"
   }
 }
