--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "Smashing-Node-Note",
+  "name": "nodejs-document",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/FFFfengfengfeng/Smashing-Node-Note.git"
-  },
+  "repository": "git+https://github.com/FFFfengfengfeng/nodejs-document.git",
   "keywords": [],
-  "author": "",
+  "author": "feng <1098865109@qq.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/FFFfengfengfeng/Smashing-Node-Note/issues"
+    "url": "https://github.com/FFFfengfengfeng/nodejs-document/issues"
   },
-  "homepage": "https://github.com/FFFfengfengfeng/Smashing-Node-Note#readme",
+  "homepage": "https://github.com/FFFfengfengfeng/nodejs-document#readme",
   "dependencies": {
-    "colors": "^1.2.4",
-    "egg": "^2.8.1",
-    "element-ui": "^2.3.9",
-    "superagent": "^3.8.3"
+    "browser-sync": "^2.26.7",
+    "gulp": "^4.0.2",
+    "gulp-clean": "^0.4.0",
+    "gulp-less": "^4.0.1",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-typescript": "^6.0.0-alpha.1",
+    "gulp-watch": "^5.0.1",
+    "typescript": "^3.7.3"
   }
 }
